--- a/beta/index.html
+++ b/beta/index.html
@@ -12,6 +12,8 @@
                 <p>Branch differences (still in beta)</p>
                 <ul>
 
+                        <li><a href='diff_fix_hvac_modes.html'>Unified diff core:dev vs beta:origin/fix_hvac_modes</a></li>
+
                         <li><a href='diff_improve-reg-clean.html'>Unified diff core:dev vs beta:origin/improve-reg-clean</a></li>
 
                         <li><a href='diff_improve_clean.html'>Unified diff core:dev vs beta:origin/improve_clean</a></li>
@@ -27,6 +29,8 @@
                         <li><a href='diff_new_sensor.html'>Unified diff core:dev vs beta:origin/new_sensor</a></li>
 
                         <li><a href='diff_pre_0_34_11.html'>Unified diff core:dev vs beta:origin/pre_0_34_11</a></li>
+
+                        <li><a href='diff_pw_33_1.html'>Unified diff core:dev vs beta:origin/pw_33_1</a></li>
 
                         <li><a href='diff_value_fn.html'>Unified diff core:dev vs beta:origin/value_fn</a></li>
 
