--- a/beta/diff.html
+++ b/beta/diff.html
@@ -28958,7 +28958,7 @@
     <td class="d2h-del d2h-change">
         <div class="d2h-code-side-line">
             <span class="d2h-code-line-prefix">-</span>
-            <span class="d2h-code-line-ctn">              &quot;home&quot;: &quot;<del>[%key:component::climate::entity_component::_::state_attributes::preset_mode::state::home%]</del>&quot;,</span>
+            <span class="d2h-code-line-ctn">              &quot;home&quot;: &quot;<del>[%key:common::state::home%]</del>&quot;,</span>
         </div>
     </td>
 </tr><tr>
