--- a/beta/diff_mixin.html
+++ b/beta/diff_mixin.html
@@ -36962,7 +36962,7 @@
     <td class="d2h-ins d2h-change">
         <div class="d2h-code-side-line">
             <span class="d2h-code-line-prefix">+</span>
-            <span class="d2h-code-line-ctn">              &quot;home&quot;: &quot;<ins>[%key:component::climate::entity_component::_::state_attributes::preset_mode::state::home%]</ins>&quot;,</span>
+            <span class="d2h-code-line-ctn">              &quot;home&quot;: &quot;<ins>[%key:common::state::home%]</ins>&quot;,</span>
         </div>
     </td>
 </tr><tr>
