--- a/beta/index.html
+++ b/beta/index.html
@@ -28,6 +28,8 @@
 
                         <li><a href='diff_python_312.html'>Unified diff core:dev vs beta:origin/python_312</a></li>
 
+                        <li><a href='diff_renovate/astral-sh-ruff-pre-commit-0.x.html'>Unified diff core:dev vs beta:origin/renovate/astral-sh-ruff-pre-commit-0.x</a></li>
+
                         <li><a href='diff_select_preset.html'>Unified diff core:dev vs beta:origin/select_preset</a></li>
 
                 </ul>
