--- a/beta/index.html
+++ b/beta/index.html
@@ -18,6 +18,8 @@
 
                         <li><a href='diff_new_sensor.html'>Unified diff core:dev vs beta:origin/new_sensor</a></li>
 
+                        <li><a href='diff_pre-commit-ci-update-config.html'>Unified diff core:dev vs beta:origin/pre-commit-ci-update-config</a></li>
+
                         <li><a href='diff_pre_0_34_11.html'>Unified diff core:dev vs beta:origin/pre_0_34_11</a></li>
 
                         <li><a href='diff_select_preset.html'>Unified diff core:dev vs beta:origin/select_preset</a></li>
