--- a/beta/index.html
+++ b/beta/index.html
@@ -14,6 +14,8 @@
 
                         <li><a href='diff_add-constants.html'>Unified diff core:dev vs beta:origin/add-constants</a></li>
 
+                        <li><a href='diff_add-constants-2.html'>Unified diff core:dev vs beta:origin/add-constants-2</a></li>
+
                         <li><a href='diff_main.html'>Unified diff core:dev vs beta:origin/main</a></li>
 
                         <li><a href='diff_migrate_max_dhw_temp.html'>Unified diff core:dev vs beta:origin/migrate_max_dhw_temp</a></li>
