--- a/beta/index.html
+++ b/beta/index.html
@@ -12,7 +12,7 @@
                 <p>Branch differences (still in beta)</p>
                 <ul>
 
-                        <li><a href='diff_config_flow.html'>Unified diff core:dev vs beta:origin/config_flow</a></li>
+                        <li><a href='diff_impl-126896.html'>Unified diff core:dev vs beta:origin/impl-126896</a></li>
 
                         <li><a href='diff_main.html'>Unified diff core:dev vs beta:origin/main</a></li>
 
