--- a/beta/index.html
+++ b/beta/index.html
@@ -12,8 +12,6 @@
                 <p>Branch differences (still in beta)</p>
                 <ul>
 
-                        <li><a href='diff_fix-typing.html'>Unified diff core:dev vs beta:origin/fix-typing</a></li>
-
                         <li><a href='diff_impl-126896.html'>Unified diff core:dev vs beta:origin/impl-126896</a></li>
 
                         <li><a href='diff_main.html'>Unified diff core:dev vs beta:origin/main</a></li>
@@ -23,6 +21,8 @@
                         <li><a href='diff_new_sensor.html'>Unified diff core:dev vs beta:origin/new_sensor</a></li>
 
                         <li><a href='diff_pre_0_34_11.html'>Unified diff core:dev vs beta:origin/pre_0_34_11</a></li>
+
+                        <li><a href='diff_renovate/astral-sh-ruff-pre-commit-0.x.html'>Unified diff core:dev vs beta:origin/renovate/astral-sh-ruff-pre-commit-0.x</a></li>
 
                         <li><a href='diff_rework_runtime_updating.html'>Unified diff core:dev vs beta:origin/rework_runtime_updating</a></li>
 
