--- a/beta/index.html
+++ b/beta/index.html
@@ -22,6 +22,10 @@
 
                         <li><a href='diff_pre_0_34_11.html'>Unified diff core:dev vs beta:origin/pre_0_34_11</a></li>
 
+                        <li><a href='diff_renovate/asottile-pyupgrade-3.x.html'>Unified diff core:dev vs beta:origin/renovate/asottile-pyupgrade-3.x</a></li>
+
+                        <li><a href='diff_renovate/cdce8p-python-typing-update-0.x.html'>Unified diff core:dev vs beta:origin/renovate/cdce8p-python-typing-update-0.x</a></li>
+
                         <li><a href='diff_rework_runtime_updating.html'>Unified diff core:dev vs beta:origin/rework_runtime_updating</a></li>
 
                         <li><a href='diff_select_preset.html'>Unified diff core:dev vs beta:origin/select_preset</a></li>
