--- a/beta/index.html
+++ b/beta/index.html
@@ -24,7 +24,7 @@
 
                         <li><a href='diff_pw-1-4-4.html'>Unified diff core:dev vs beta:origin/pw-1-4-4</a></li>
 
-                        <li><a href='diff_pw-1.5.0.html'>Unified diff core:dev vs beta:origin/pw-1.5.0</a></li>
+                        <li><a href='diff_rework-testcode.html'>Unified diff core:dev vs beta:origin/rework-testcode</a></li>
 
                         <li><a href='diff_rework_runtime_updating.html'>Unified diff core:dev vs beta:origin/rework_runtime_updating</a></li>
 
