--- a/beta/diff.html
+++ b/beta/diff.html
@@ -66,7 +66,7 @@
           <path d="M6 9H3V7h3V4l5 4-5 4V9z m8-7v12c0 0.55-0.45 1-1 1H1c-0.55 0-1-0.45-1-1V2c0-0.55 0.45-1 1-1h12c0.55 0 1 0.45 1 1z m-1 0H1v12h12V2z"></path>
       </svg>      <a href="#d2h-788472" class="d2h-file-name">/home/runner/work/progress/progress/clones/beta/{ha-core/homeassistant/components → beta/custom_components}/plugwise/__init__.py</a>
       <span class="d2h-file-stats">
-          <span class="d2h-lines-added">+84</span>
+          <span class="d2h-lines-added">+85</span>
           <span class="d2h-lines-deleted">-18</span>
       </span>
     </span>
@@ -1388,7 +1388,7 @@
 </tr><tr>
     <td class="d2h-code-side-linenumber d2h-info"></td>
     <td class="d2h-info">
-        <div class="d2h-code-side-line">@@ -91,10 +141,26 @@</div>
+        <div class="d2h-code-side-line">@@ -91,10 +141,27 @@</div>
     </td>
 </tr><tr>
     <td class="d2h-code-side-linenumber d2h-cntx">
@@ -1488,6 +1488,16 @@
         <div class="d2h-code-side-line">
             <span class="d2h-code-line-prefix">&nbsp;</span>
             <span class="d2h-code-line-ctn">            ent_reg.async_update_entity(entity_id, new_unique_id=new_unique_id)</span>
+        </div>
+    </td>
+</tr><tr>
+    <td class="d2h-code-side-linenumber d2h-code-side-emptyplaceholder d2h-cntx d2h-emptyplaceholder">
+      
+    </td>
+    <td class="d2h-cntx d2h-emptyplaceholder">
+        <div class="d2h-code-side-line d2h-code-side-emptyplaceholder">
+            <span class="d2h-code-line-prefix">&nbsp;</span>
+            <span class="d2h-code-line-ctn"><br></span>
         </div>
     </td>
 </tr><tr>
@@ -2946,7 +2956,7 @@
     <td class="d2h-ins">
         <div class="d2h-code-side-line">
             <span class="d2h-code-line-prefix">+</span>
-            <span class="d2h-code-line-ctn">async def async_migrate_entry(hass: HomeAssistant, entry: ConfigEntry) -&gt; bool:</span>
+            <span class="d2h-code-line-ctn"># pw-beta only - revert adding CONF_TIMEOUT to config_entry in v0.53.3</span>
         </div>
     </td>
 </tr><tr>
@@ -2956,7 +2966,7 @@
     <td class="d2h-ins">
         <div class="d2h-code-side-line">
             <span class="d2h-code-line-prefix">+</span>
-            <span class="d2h-code-line-ctn">    &quot;&quot;&quot;Migrate back to v1.1 config entry.&quot;&quot;&quot;</span>
+            <span class="d2h-code-line-ctn">async def async_migrate_entry(hass: HomeAssistant, entry: ConfigEntry) -&gt; bool:</span>
         </div>
     </td>
 </tr><tr>
@@ -2966,7 +2976,7 @@
     <td class="d2h-ins">
         <div class="d2h-code-side-line">
             <span class="d2h-code-line-prefix">+</span>
-            <span class="d2h-code-line-ctn">    if entry.version &gt; 1:</span>
+            <span class="d2h-code-line-ctn">    &quot;&quot;&quot;Migrate back to v1.1 config entry.&quot;&quot;&quot;</span>
         </div>
     </td>
 </tr><tr>
@@ -2976,7 +2986,7 @@
     <td class="d2h-ins">
         <div class="d2h-code-side-line">
             <span class="d2h-code-line-prefix">+</span>
-            <span class="d2h-code-line-ctn">        # This means the user has downgraded from a future version</span>
+            <span class="d2h-code-line-ctn">    if entry.version &gt; 1:</span>
         </div>
     </td>
 </tr><tr>
@@ -2986,7 +2996,7 @@
     <td class="d2h-ins">
         <div class="d2h-code-side-line">
             <span class="d2h-code-line-prefix">+</span>
-            <span class="d2h-code-line-ctn">        return False</span>
+            <span class="d2h-code-line-ctn">        # This means the user has downgraded from a future version</span>
         </div>
     </td>
 </tr><tr>
@@ -2996,7 +3006,7 @@
     <td class="d2h-ins">
         <div class="d2h-code-side-line">
             <span class="d2h-code-line-prefix">+</span>
-            <span class="d2h-code-line-ctn"><br></span>
+            <span class="d2h-code-line-ctn">        return False</span>
         </div>
     </td>
 </tr><tr>
@@ -3006,7 +3016,7 @@
     <td class="d2h-ins">
         <div class="d2h-code-side-line">
             <span class="d2h-code-line-prefix">+</span>
-            <span class="d2h-code-line-ctn">    if entry.version == 1 and entry.minor_version == 2:</span>
+            <span class="d2h-code-line-ctn"><br></span>
         </div>
     </td>
 </tr><tr>
@@ -3016,7 +3026,7 @@
     <td class="d2h-ins">
         <div class="d2h-code-side-line">
             <span class="d2h-code-line-prefix">+</span>
-            <span class="d2h-code-line-ctn">        new_data = {**entry.data}</span>
+            <span class="d2h-code-line-ctn">    if entry.version == 1 and entry.minor_version == 2:</span>
         </div>
     </td>
 </tr><tr>
@@ -3026,7 +3036,7 @@
     <td class="d2h-ins">
         <div class="d2h-code-side-line">
             <span class="d2h-code-line-prefix">+</span>
-            <span class="d2h-code-line-ctn">        new_data.pop(CONF_TIMEOUT)</span>
+            <span class="d2h-code-line-ctn">        new_data = {**entry.data}</span>
         </div>
     </td>
 </tr><tr>
@@ -3036,7 +3046,7 @@
     <td class="d2h-ins">
         <div class="d2h-code-side-line">
             <span class="d2h-code-line-prefix">+</span>
-            <span class="d2h-code-line-ctn">        hass.config_entries.async_update_entry(</span>
+            <span class="d2h-code-line-ctn">        new_data.pop(CONF_TIMEOUT)</span>
         </div>
     </td>
 </tr><tr>
@@ -3046,7 +3056,7 @@
     <td class="d2h-ins">
         <div class="d2h-code-side-line">
             <span class="d2h-code-line-prefix">+</span>
-            <span class="d2h-code-line-ctn">            entry, data=new_data, minor_version=1, version=1</span>
+            <span class="d2h-code-line-ctn">        hass.config_entries.async_update_entry(</span>
         </div>
     </td>
 </tr><tr>
@@ -3056,7 +3066,7 @@
     <td class="d2h-ins">
         <div class="d2h-code-side-line">
             <span class="d2h-code-line-prefix">+</span>
-            <span class="d2h-code-line-ctn">        )</span>
+            <span class="d2h-code-line-ctn">            entry, data=new_data, minor_version=1, version=1</span>
         </div>
     </td>
 </tr><tr>
@@ -3066,7 +3076,7 @@
     <td class="d2h-ins">
         <div class="d2h-code-side-line">
             <span class="d2h-code-line-prefix">+</span>
-            <span class="d2h-code-line-ctn"><br></span>
+            <span class="d2h-code-line-ctn">        )</span>
         </div>
     </td>
 </tr><tr>
@@ -3076,7 +3086,7 @@
     <td class="d2h-ins">
         <div class="d2h-code-side-line">
             <span class="d2h-code-line-prefix">+</span>
-            <span class="d2h-code-line-ctn">    LOGGER.debug(</span>
+            <span class="d2h-code-line-ctn"><br></span>
         </div>
     </td>
 </tr><tr>
@@ -3086,7 +3096,7 @@
     <td class="d2h-ins">
         <div class="d2h-code-side-line">
             <span class="d2h-code-line-prefix">+</span>
-            <span class="d2h-code-line-ctn">        &quot;Migration to version %s.%s successful&quot;,</span>
+            <span class="d2h-code-line-ctn">    LOGGER.debug(</span>
         </div>
     </td>
 </tr><tr>
@@ -3096,7 +3106,7 @@
     <td class="d2h-ins">
         <div class="d2h-code-side-line">
             <span class="d2h-code-line-prefix">+</span>
-            <span class="d2h-code-line-ctn">        entry.version,</span>
+            <span class="d2h-code-line-ctn">        &quot;Migration to version %s.%s successful&quot;,</span>
         </div>
     </td>
 </tr><tr>
@@ -3106,7 +3116,7 @@
     <td class="d2h-ins">
         <div class="d2h-code-side-line">
             <span class="d2h-code-line-prefix">+</span>
-            <span class="d2h-code-line-ctn">        entry.minor_version,</span>
+            <span class="d2h-code-line-ctn">        entry.version,</span>
         </div>
     </td>
 </tr><tr>
@@ -3116,7 +3126,7 @@
     <td class="d2h-ins">
         <div class="d2h-code-side-line">
             <span class="d2h-code-line-prefix">+</span>
-            <span class="d2h-code-line-ctn">    )</span>
+            <span class="d2h-code-line-ctn">        entry.minor_version,</span>
         </div>
     </td>
 </tr><tr>
@@ -3126,12 +3136,22 @@
     <td class="d2h-ins">
         <div class="d2h-code-side-line">
             <span class="d2h-code-line-prefix">+</span>
-            <span class="d2h-code-line-ctn"><br></span>
+            <span class="d2h-code-line-ctn">    )</span>
         </div>
     </td>
 </tr><tr>
     <td class="d2h-code-side-linenumber d2h-ins">
       166
+    </td>
+    <td class="d2h-ins">
+        <div class="d2h-code-side-line">
+            <span class="d2h-code-line-prefix">+</span>
+            <span class="d2h-code-line-ctn"><br></span>
+        </div>
+    </td>
+</tr><tr>
+    <td class="d2h-code-side-linenumber d2h-ins">
+      167
     </td>
     <td class="d2h-ins">
         <div class="d2h-code-side-line">
