--- a/beta/diff_main.html
+++ b/beta/diff_main.html
@@ -67,7 +67,7 @@
       </svg>      <a href="#d2h-805166" class="d2h-file-name">/home/runner/work/progress/progress/clones/beta/{beta/custom_components → ha-core/homeassistant/components}/plugwise/__init__.py</a>
       <span class="d2h-file-stats">
           <span class="d2h-lines-added">+18</span>
-          <span class="d2h-lines-deleted">-84</span>
+          <span class="d2h-lines-deleted">-85</span>
       </span>
     </span>
 </li>
@@ -1388,7 +1388,7 @@
 </tr><tr>
     <td class="d2h-code-side-linenumber d2h-info"></td>
     <td class="d2h-info">
-        <div class="d2h-code-side-line">@@ -141,26 +91,10 @@</div>
+        <div class="d2h-code-side-line">@@ -141,27 +91,10 @@</div>
     </td>
 </tr><tr>
     <td class="d2h-code-side-linenumber d2h-cntx">
@@ -1507,7 +1507,7 @@
     <td class="d2h-del">
         <div class="d2h-code-side-line">
             <span class="d2h-code-line-prefix">-</span>
-            <span class="d2h-code-line-ctn">async def async_migrate_entry(hass: HomeAssistant, entry: ConfigEntry) -&gt; bool:</span>
+            <span class="d2h-code-line-ctn"># pw-beta only - revert adding CONF_TIMEOUT to config_entry in v0.53.3</span>
         </div>
     </td>
 </tr><tr>
@@ -1517,7 +1517,7 @@
     <td class="d2h-del">
         <div class="d2h-code-side-line">
             <span class="d2h-code-line-prefix">-</span>
-            <span class="d2h-code-line-ctn">    &quot;&quot;&quot;Migrate back to v1.1 config entry.&quot;&quot;&quot;</span>
+            <span class="d2h-code-line-ctn">async def async_migrate_entry(hass: HomeAssistant, entry: ConfigEntry) -&gt; bool:</span>
         </div>
     </td>
 </tr><tr>
@@ -1527,7 +1527,7 @@
     <td class="d2h-del">
         <div class="d2h-code-side-line">
             <span class="d2h-code-line-prefix">-</span>
-            <span class="d2h-code-line-ctn">    if entry.version &gt; 1:</span>
+            <span class="d2h-code-line-ctn">    &quot;&quot;&quot;Migrate back to v1.1 config entry.&quot;&quot;&quot;</span>
         </div>
     </td>
 </tr><tr>
@@ -1537,7 +1537,7 @@
     <td class="d2h-del">
         <div class="d2h-code-side-line">
             <span class="d2h-code-line-prefix">-</span>
-            <span class="d2h-code-line-ctn">        # This means the user has downgraded from a future version</span>
+            <span class="d2h-code-line-ctn">    if entry.version &gt; 1:</span>
         </div>
     </td>
 </tr><tr>
@@ -1547,7 +1547,7 @@
     <td class="d2h-del">
         <div class="d2h-code-side-line">
             <span class="d2h-code-line-prefix">-</span>
-            <span class="d2h-code-line-ctn">        return False</span>
+            <span class="d2h-code-line-ctn">        # This means the user has downgraded from a future version</span>
         </div>
     </td>
 </tr><tr>
@@ -1557,7 +1557,7 @@
     <td class="d2h-del">
         <div class="d2h-code-side-line">
             <span class="d2h-code-line-prefix">-</span>
-            <span class="d2h-code-line-ctn"><br></span>
+            <span class="d2h-code-line-ctn">        return False</span>
         </div>
     </td>
 </tr><tr>
@@ -1567,7 +1567,7 @@
     <td class="d2h-del">
         <div class="d2h-code-side-line">
             <span class="d2h-code-line-prefix">-</span>
-            <span class="d2h-code-line-ctn">    if entry.version == 1 and entry.minor_version == 2:</span>
+            <span class="d2h-code-line-ctn"><br></span>
         </div>
     </td>
 </tr><tr>
@@ -1577,7 +1577,7 @@
     <td class="d2h-del">
         <div class="d2h-code-side-line">
             <span class="d2h-code-line-prefix">-</span>
-            <span class="d2h-code-line-ctn">        new_data = {**entry.data}</span>
+            <span class="d2h-code-line-ctn">    if entry.version == 1 and entry.minor_version == 2:</span>
         </div>
     </td>
 </tr><tr>
@@ -1587,7 +1587,7 @@
     <td class="d2h-del">
         <div class="d2h-code-side-line">
             <span class="d2h-code-line-prefix">-</span>
-            <span class="d2h-code-line-ctn">        new_data.pop(CONF_TIMEOUT)</span>
+            <span class="d2h-code-line-ctn">        new_data = {**entry.data}</span>
         </div>
     </td>
 </tr><tr>
@@ -1597,7 +1597,7 @@
     <td class="d2h-del">
         <div class="d2h-code-side-line">
             <span class="d2h-code-line-prefix">-</span>
-            <span class="d2h-code-line-ctn">        hass.config_entries.async_update_entry(</span>
+            <span class="d2h-code-line-ctn">        new_data.pop(CONF_TIMEOUT)</span>
         </div>
     </td>
 </tr><tr>
@@ -1607,7 +1607,7 @@
     <td class="d2h-del">
         <div class="d2h-code-side-line">
             <span class="d2h-code-line-prefix">-</span>
-            <span class="d2h-code-line-ctn">            entry, data=new_data, minor_version=1, version=1</span>
+            <span class="d2h-code-line-ctn">        hass.config_entries.async_update_entry(</span>
         </div>
     </td>
 </tr><tr>
@@ -1617,7 +1617,7 @@
     <td class="d2h-del">
         <div class="d2h-code-side-line">
             <span class="d2h-code-line-prefix">-</span>
-            <span class="d2h-code-line-ctn">        )</span>
+            <span class="d2h-code-line-ctn">            entry, data=new_data, minor_version=1, version=1</span>
         </div>
     </td>
 </tr><tr>
@@ -1627,7 +1627,7 @@
     <td class="d2h-del">
         <div class="d2h-code-side-line">
             <span class="d2h-code-line-prefix">-</span>
-            <span class="d2h-code-line-ctn"><br></span>
+            <span class="d2h-code-line-ctn">        )</span>
         </div>
     </td>
 </tr><tr>
@@ -1637,7 +1637,7 @@
     <td class="d2h-del">
         <div class="d2h-code-side-line">
             <span class="d2h-code-line-prefix">-</span>
-            <span class="d2h-code-line-ctn">    LOGGER.debug(</span>
+            <span class="d2h-code-line-ctn"><br></span>
         </div>
     </td>
 </tr><tr>
@@ -1647,7 +1647,7 @@
     <td class="d2h-del">
         <div class="d2h-code-side-line">
             <span class="d2h-code-line-prefix">-</span>
-            <span class="d2h-code-line-ctn">        &quot;Migration to version %s.%s successful&quot;,</span>
+            <span class="d2h-code-line-ctn">    LOGGER.debug(</span>
         </div>
     </td>
 </tr><tr>
@@ -1657,7 +1657,7 @@
     <td class="d2h-del">
         <div class="d2h-code-side-line">
             <span class="d2h-code-line-prefix">-</span>
-            <span class="d2h-code-line-ctn">        entry.version,</span>
+            <span class="d2h-code-line-ctn">        &quot;Migration to version %s.%s successful&quot;,</span>
         </div>
     </td>
 </tr><tr>
@@ -1667,7 +1667,7 @@
     <td class="d2h-del">
         <div class="d2h-code-side-line">
             <span class="d2h-code-line-prefix">-</span>
-            <span class="d2h-code-line-ctn">        entry.minor_version,</span>
+            <span class="d2h-code-line-ctn">        entry.version,</span>
         </div>
     </td>
 </tr><tr>
@@ -1677,7 +1677,7 @@
     <td class="d2h-del">
         <div class="d2h-code-side-line">
             <span class="d2h-code-line-prefix">-</span>
-            <span class="d2h-code-line-ctn">    )</span>
+            <span class="d2h-code-line-ctn">        entry.minor_version,</span>
         </div>
     </td>
 </tr><tr>
@@ -1687,12 +1687,22 @@
     <td class="d2h-del">
         <div class="d2h-code-side-line">
             <span class="d2h-code-line-prefix">-</span>
-            <span class="d2h-code-line-ctn"><br></span>
+            <span class="d2h-code-line-ctn">    )</span>
         </div>
     </td>
 </tr><tr>
     <td class="d2h-code-side-linenumber d2h-del">
       166
+    </td>
+    <td class="d2h-del">
+        <div class="d2h-code-side-line">
+            <span class="d2h-code-line-prefix">-</span>
+            <span class="d2h-code-line-ctn"><br></span>
+        </div>
+    </td>
+</tr><tr>
+    <td class="d2h-code-side-linenumber d2h-del">
+      167
     </td>
     <td class="d2h-del">
         <div class="d2h-code-side-line">
@@ -2927,6 +2937,16 @@
         <div class="d2h-code-side-line">
             <span class="d2h-code-line-prefix">&nbsp;</span>
             <span class="d2h-code-line-ctn">            ent_reg.async_update_entity(entity_id, new_unique_id=new_unique_id)</span>
+        </div>
+    </td>
+</tr><tr>
+    <td class="d2h-code-side-linenumber d2h-code-side-emptyplaceholder d2h-cntx d2h-emptyplaceholder">
+      
+    </td>
+    <td class="d2h-cntx d2h-emptyplaceholder">
+        <div class="d2h-code-side-line d2h-code-side-emptyplaceholder">
+            <span class="d2h-code-line-prefix">&nbsp;</span>
+            <span class="d2h-code-line-ctn"><br></span>
         </div>
     </td>
 </tr><tr>
